k8s/prod/20-backend-blue.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-blue
  namespace: prod
  labels: { app: backend, color: blue }
spec:
  replicas: 2
  selector: { matchLabels: { app: backend, color: blue } }
  template:
    metadata:
      labels: { app: backend, color: blue }
    spec:
      containers:
      - name: backend
        image: 293113319402.dkr.ecr.us-east-1.amazonaws.com/rmit-store/backend:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3000
