k8s/prod/20-backend-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: prod
  labels: { app: backend, version: blue }
spec:
  replicas: 1
  selector: { matchLabels: { app: backend, version: blue } }
  template:
    metadata:
      labels: { app: backend, version: blue }
    spec:
      containers:
      - name: backend
        image: REPLACE_ME_BACKEND_IMAGE   # will be updated by Jenkins 'set image'
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3000
