k8s/prod/21-backend-green.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-green
  namespace: prod
  labels: { app: backend, color: green }
spec:
  replicas: 2
  selector: { matchLabels: { app: backend, color: green } }
  template:
    metadata:
      labels: { app: backend, color: green }
    spec:
      containers:
      - name: backend
        image: 293113319402.dkr.ecr.us-east-1.amazonaws.com/rmit-store/backend:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3000
