k8s/prod/30-frontend-blue.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-blue
  namespace: prod
  labels: { app: frontend, color: blue }
spec:
  replicas: 2
  selector: { matchLabels: { app: frontend, color: blue } }
  template:
    metadata:
      labels: { app: frontend, color: blue }
    spec:
      containers:
      - name: frontend
        image: 293113319402.dkr.ecr.us-east-1.amazonaws.com/rmit-store/frontend:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
