k8s/prod/30-frontend-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: prod
  labels: { app: frontend, version: blue }
spec:
  replicas: 1
  selector: { matchLabels: { app: frontend, version: blue } }
  template:
    metadata:
      labels: { app: frontend, version: blue }
    spec:
      containers:
      - name: frontend
        image: __IMAGE__   # will be updated by Jenkins 'set image'
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
