k8s/prod/31-frontend-green.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-green
  namespace: prod
  labels: { app: frontend, color: green }
spec:
  replicas: 2
  selector: { matchLabels: { app: frontend, color: green } }
  template:
    metadata:
      labels: { app: frontend, color: green }
    spec:
      containers:
      - name: frontend
        image: 293113319402.dkr.ecr.us-east-1.amazonaws.com/rmit-store/frontend:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
