k8s/prod/21-backend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-svc-blue
  namespace: prod
  labels: { app: backend }
spec:
  type: ClusterIP
  selector: { app: backend, version: blue }
  ports:
  - port: 3000
    targetPort: 3000
