k8s/prod/22-backend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-svc
  namespace: prod
  labels: { app: backend }
spec:
  type: ClusterIP
  selector:
    app: backend
    color: blue   # << flip to 'green' to promote
  ports:
  - port: 3000
    targetPort: 3000
