k8s/prod/31-frontend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-svc-blue
  namespace: prod
  labels: { app: frontend }
spec:
  type: ClusterIP
  selector: { app: frontend, version: blue }
  ports:
  - port: 8080
    targetPort: 8080
