k8s/prod/32-frontend-svc-canary.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-svc-canary
  namespace: prod
  labels: { app: frontend }
spec:
  type: ClusterIP
  selector: { app: frontend, version: green }
  ports:
  - port: 8080
    targetPort: 8080
