k8s/prod/32-frontend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-svc
  namespace: prod
  labels: { app: frontend }
spec:
  type: ClusterIP
  selector:
    app: frontend
    color: blue   # << flip to 'green' to promote
  ports:
  - port: 80
    targetPort: 8080
