k8s/prod/40-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: prod
spec:
  ingressClassName: nginx
  rules:
  - host: prodhost
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend: { service: { name: backend-svc,  port: { number: 3000 } } }
      - path: /
        pathType: Prefix
        backend: { service: { name: frontend-svc, port: { number: 8080 } } }
  - host: lbhost
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend: { service: { name: backend-svc,  port: { number: 3000 } } }
      - path: /
        pathType: Prefix
        backend: { service: { name: frontend-svc, port: { number: 8080 } } }
